--- a/simulator/supervisor/CMakeLists.txt
+++ b/simulator/supervisor/CMakeLists.txt
@@ -4,6 +4,6 @@ cmake_policy(SET CMP0079 NEW)
 set(SOURCES supervisor.cpp)
 
 add_library(supervisor_impl OBJECT ${SOURCES})
-target_include_directories(supervisor_impl PUBLIC ${SIMULATOR_ROOT}/common ${SIMULATOR_ROOT}/hart)
+target_include_directories(supervisor_impl PUBLIC ${SIMULATOR_ROOT}/common ${SIMULATOR_ROOT}/hart ${SIMULATOR_ROOT}/memory)
 
 target_link_libraries(simulator PUBLIC supervisor_impl)
