Rename functions and variables according to NAMING_RULES.md

--- a/simulator/hart/CMakeLists.txt
+++ b/simulator/hart/CMakeLists.txt
@@ -4,6 +4,6 @@ cmake_policy(SET CMP0079 NEW)
 set(SOURCES hart.cpp)
 
 add_library(hart_impl OBJECT ${SOURCES})
-target_include_directories(hart_impl PUBLIC ${SIMULATOR_ROOT}/common)
+target_include_directories(hart_impl PUBLIC ${SIMULATOR_ROOT}/common ${SIMULATOR_ROOT}/mmu)
 
 target_link_libraries(simulator PUBLIC hart_impl)
