Change CMakeLists.txt files & include rules

--- a/simulator/mmu/CMakeLists.txt
+++ b/simulator/mmu/CMakeLists.txt
@@ -3,6 +3,6 @@ cmake_minimum_required(VERSION 3.13)
 set(SOURCES mmu.cpp)
 
 add_library(mmu_impl OBJECT ${SOURCES})
-target_include_directories(mmu_impl PUBLIC ${SIMULATOR_ROOT}/common ${SIMULATOR_ROOT}/hart ${SIMULATOR_ROOT}/memory ${SIMULATOR_ROOT}/supervisor)
+target_include_directories(supervisor_impl PUBLIC ${SIMULATOR_ROOT})
 
 target_link_libraries(simulator PUBLIC mmu_impl)
