Fixes in memory, CMakeLists.txt & includes common style, minor code changes (#6)
* Change versions of CMakeLists.txt files from 3.10 to 3.13

* Change CMakeLists.txt files & include rules

* Fix CMakeLists.txt files, minor code reorganization & fixes

* Replace camelCase to PascalCase in Supervisor methods

--- a/simulator/mmu/CMakeLists.txt
+++ b/simulator/mmu/CMakeLists.txt
@@ -1,9 +1,8 @@
-cmake_minimum_required(VERSION 3.10)
-cmake_policy(SET CMP0079 NEW)
+cmake_minimum_required(VERSION 3.13)
 
 set(SOURCES mmu.cpp)
 
 add_library(mmu_impl OBJECT ${SOURCES})
-target_include_directories(mmu_impl PUBLIC ${SIMULATOR_ROOT}/common ${SIMULATOR_ROOT}/hart ${SIMULATOR_ROOT}/memory ${SIMULATOR_ROOT}/supervisor)
+target_include_directories(mmu_impl PUBLIC ${SIMULATOR_ROOT})
 
 target_link_libraries(simulator PUBLIC mmu_impl)
