--- a/simulator/hart/CMakeLists.txt
+++ b/simulator/hart/CMakeLists.txt
@@ -1,9 +1,8 @@
-cmake_minimum_required(VERSION 3.10)
-cmake_policy(SET CMP0079 NEW)
+cmake_minimum_required(VERSION 3.13)
 
 set(SOURCES hart.cpp)
 
 add_library(hart_impl OBJECT ${SOURCES})
-target_include_directories(hart_impl PUBLIC ${SIMULATOR_ROOT}/common ${SIMULATOR_ROOT}/mmu)
+target_include_directories(hart_impl PUBLIC ${SIMULATOR_ROOT})
 
 target_link_libraries(simulator PUBLIC hart_impl)
