--- a/simulator/hart/CMakeLists.txt
+++ b/simulator/hart/CMakeLists.txt
@@ -5,4 +5,5 @@ set(SOURCES hart.cpp)
 add_library(hart_impl OBJECT ${SOURCES})
 target_include_directories(hart_impl PUBLIC ${SIMULATOR_ROOT})
 
-target_link_libraries(simulator PUBLIC hart_impl)
+target_link_libraries(simulator  PUBLIC hart_impl)
+target_link_libraries(unit_tests PUBLIC hart_impl)
