--- a/simulator/memory/CMakeLists.txt
+++ b/simulator/memory/CMakeLists.txt
@@ -5,4 +5,5 @@ set(SOURCES memory_controller.cpp)
 add_library(memory_impl OBJECT ${SOURCES})
 target_include_directories(memory_impl PUBLIC ${SIMULATOR_ROOT})
 
-target_link_libraries(simulator PUBLIC memory_impl)
+target_link_libraries(simulator  PUBLIC memory_impl)
+target_link_libraries(unit_tests PUBLIC memory_impl)
