Replace current subdirectories build in CMakeLists.txt

--- a/simulator/CMakeLists.txt
+++ b/simulator/CMakeLists.txt
@@ -11,6 +11,19 @@ set(SIMULATOR_BINARY_ROOT ${CMAKE_CURRENT_BINARY_DIR})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -Wall -Wextra -Werror -Wshadow")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -fno-exceptions")
 
+add_subdirectory(memory)
+add_subdirectory(supervisor)
+add_subdirectory(hart)
+add_subdirectory(mmu)
+
+add_library(simulator_static STATIC)
+target_link_libraries(simulator_static PUBLIC
+    memory_impl
+    hart_impl
+    mmu_impl
+    supervisor_impl
+)
+
 # --------------------------clang-format--------------------------------------
 
 file(GLOB_RECURSE ALL_SOURCES_FILES *.cpp *.h)
@@ -33,15 +46,12 @@ find_package(GTest REQUIRED)
 add_executable(unit_tests)
 target_include_directories(unit_tests PUBLIC ${GTEST_INCLUDE_DIR})
 
-target_link_libraries(unit_tests PUBLIC GTest::gtest_main)
+target_link_libraries(unit_tests PUBLIC simulator_static GTest::gtest_main)
+
+add_subdirectory(tests)
 
 # ----------------------------------------------------------------------------
 
 add_executable(simulator simulator.cpp)
+target_link_libraries(simulator PUBLIC simulator_static)
 
-add_subdirectory(memory)
-add_subdirectory(supervisor)
-add_subdirectory(hart)
-add_subdirectory(mmu)
-
-add_subdirectory(tests)
