Add bit functions for instructions' decoding

--- a/simulator/CMakeLists.txt
+++ b/simulator/CMakeLists.txt
@@ -16,6 +16,7 @@ add_subdirectory(supervisor)
 add_subdirectory(hart)
 add_subdirectory(mmu)
 add_subdirectory(instruction)
+add_subdirectory(common)
 
 add_library(simulator_static STATIC)
 target_link_libraries(simulator_static PUBLIC
@@ -24,6 +25,7 @@ target_link_libraries(simulator_static PUBLIC
     mmu_impl
     supervisor_impl
     instruction_impl
+    common_impl
 )
 
 # --------------------------clang-format--------------------------------------
