Add instructions' execution to CMakeLists.txt, fix compile errors

--- a/simulator/instruction/CMakeLists.txt
+++ b/simulator/instruction/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.13)
 
-set(SOURCES instruction.cpp instruction_decode.cpp)
+set(SOURCES instruction.cpp instruction_decode.cpp instruction_exec.cpp)
 
 add_library(instruction_impl OBJECT ${SOURCES})
 target_include_directories(instruction_impl PUBLIC ${SIMULATOR_ROOT})
