--- a/simulator/hart/CMakeLists.txt
+++ b/simulator/hart/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.13)
 
-set(SOURCES hart.cpp)
+set(SOURCES hart.cpp
+            exception_handling.cpp
+)
 
 add_library(hart_impl OBJECT ${SOURCES})
 target_include_directories(hart_impl PUBLIC ${SIMULATOR_ROOT})
