Implement Hart load/store function that call MMU exception handler

--- a/simulator/hart/CMakeLists.txt
+++ b/simulator/hart/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.13)
 
 set(SOURCES hart.cpp
-            exception_handling.cpp
+            exception_handler.cpp
 )
 
 add_library(hart_impl OBJECT ${SOURCES})
