Implementation of hart instruction execution
Signed-off-by: Stan1slavssKy <stas00333@gmail.com>

--- a/simulator/hart/CMakeLists.txt
+++ b/simulator/hart/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.13)
 
 set(SOURCES hart.cpp
+            execute.cpp
             exception_handler.cpp
+            instruction/instruction_exec.cpp
 )
 
 add_library(hart_impl OBJECT ${SOURCES})
