--- a/simulator/CMakeLists.txt
+++ b/simulator/CMakeLists.txt
@@ -15,6 +15,7 @@ add_subdirectory(memory)
 add_subdirectory(supervisor)
 add_subdirectory(hart)
 add_subdirectory(mmu)
+add_subdirectory(argparser)
 add_subdirectory(common)
 
 add_library(simulator_static STATIC)
@@ -23,7 +24,9 @@ target_link_libraries(simulator_static PUBLIC
     hart_impl
     mmu_impl
     supervisor_impl
+    parser_impl
     common_impl
+
 )
 
 # --------------------------clang-format--------------------------------------
