initial implementation of plugins and cosim

--- a/simulator/CMakeLists.txt
+++ b/simulator/CMakeLists.txt
@@ -17,16 +17,19 @@ add_subdirectory(hart)
 add_subdirectory(mmu)
 add_subdirectory(argparser)
 add_subdirectory(common)
+add_subdirectory(plugin)
+add_subdirectory(cosimulation)
 
 add_library(simulator_static STATIC)
 target_link_libraries(simulator_static PUBLIC
     memory_impl
+    plugin_impl dl
     hart_impl
     mmu_impl
     supervisor_impl
     parser_impl
     common_impl
-
+    cosim_impl
 )
 
 # --------------------------clang-format--------------------------------------
