BB && threaded dispatch implementation
Signed-off-by: Stan1slavssKy <stas00333@gmail.com>

--- a/simulator/hart/CMakeLists.txt
+++ b/simulator/hart/CMakeLists.txt
@@ -1,10 +1,15 @@
 cmake_minimum_required(VERSION 3.13)
 
 set(SOURCES hart.cpp
-            execute.cpp
+            basic_block.cpp
             exception_handler.cpp
-            instruction/instruction_exec.cpp
 )
 
 add_library(hart_impl OBJECT ${SOURCES})
-target_include_directories(hart_impl PUBLIC ${SIMULATOR_ROOT})
+target_include_directories(hart_impl PUBLIC 
+                           ${SIMULATOR_ROOT}
+                           ${SIMULATOR_BINARY_ROOT}
+)
+
+add_dependencies(hart_impl decoder_impl)
+target_link_libraries(hart_impl decoder_impl)
