BB && threaded dispatch implementation
Signed-off-by: Stan1slavssKy <stas00333@gmail.com>

--- a/simulator/CMakeLists.txt
+++ b/simulator/CMakeLists.txt
@@ -10,7 +10,7 @@ set(SIMULATOR_BINARY_ROOT ${CMAKE_CURRENT_BINARY_DIR})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -Wall -Wextra -Werror -Wshadow")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -fno-exceptions")
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG -DDEBUG_MMU -DDEBUG_ELF -DDEBUG_EXCEPTION -DDEBUG_HART")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG -DDEBUG_ELF -DDEBUG_EXCEPTION -DDEBUG_HART")
 
 add_subdirectory(memory)
 add_subdirectory(simulator)
@@ -18,6 +18,7 @@ add_subdirectory(hart)
 add_subdirectory(mmu)
 add_subdirectory(argparser)
 add_subdirectory(common)
+add_subdirectory(codegen)
 
 add_library(simulator_static STATIC)
 target_link_libraries(simulator_static PUBLIC
@@ -33,7 +34,7 @@ target_link_libraries(simulator_static PUBLIC
 
 file(GLOB_RECURSE ALL_SOURCES_FILES *.cpp *.h)
 
-find_program(CLANG_FORMAT_EXECUTABLE NAMES clang-format-14 clang-format)
+find_program(CLANG_FORMAT_EXECUTABLE NAMES clang-format-14)
 
 add_custom_target(clang-force-format
     COMMAND ${CLANG_FORMAT_EXECUTABLE}
