--- a/simulator/mmu/CMakeLists.txt
+++ b/simulator/mmu/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.13)
 
-set(SOURCES mmu.cpp tlb.cpp)
+set(SOURCES mmu.cpp)
 
 add_library(mmu_impl OBJECT ${SOURCES})
 target_include_directories(mmu_impl PUBLIC ${SIMULATOR_ROOT})
