Add basic exception-handling

--- a/simulator/CMakeLists.txt
+++ b/simulator/CMakeLists.txt
@@ -34,7 +34,7 @@ target_link_libraries(simulator_static PUBLIC
 
 file(GLOB_RECURSE ALL_SOURCES_FILES *.cpp *.h)
 
-find_program(CLANG_FORMAT_EXECUTABLE NAMES clang-format-14)
+find_program(CLANG_FORMAT_EXECUTABLE NAMES clang-format)
 
 add_custom_target(clang-force-format
     COMMAND ${CLANG_FORMAT_EXECUTABLE}
