--- a/simulator/codegen/CMakeLists.txt
+++ b/simulator/codegen/CMakeLists.txt
@@ -1,5 +1,5 @@
 find_package(Python3 REQUIRED)
-find_program(CLANG_FORMAT_EXECUTABLE NAMES clang-format-14)
+find_program(CLANG_FORMAT_EXECUTABLE NAMES clang-format)
 
 set(DECODER_PATH ${SIMULATOR_ROOT}/hart/decoder.cpp)
 set(INSTR_DEF_PATH ${CMAKE_CURRENT_BINARY_DIR}/generated/instruction.def)
@@ -12,11 +12,11 @@ set(FILES_TO_GEN
 )
 
 add_custom_command(OUTPUT ${FILES_TO_GEN}
-    COMMAND ${CMAKE_COMMAND} -E make_directory generated 
+    COMMAND ${CMAKE_COMMAND} -E make_directory generated
     COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/generate.py ${CMAKE_CURRENT_SOURCE_DIR}/risc-v.yaml
                                   ${SIMULATOR_ROOT}/hart/ "decoder"
     COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/generate.py ${CMAKE_CURRENT_SOURCE_DIR}/risc-v.yaml
-                                  ${SIMULATOR_ROOT}/hart/instruction "iid"                         
+                                  ${SIMULATOR_ROOT}/hart/instruction "iid"
     COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/generate.py ${CMAKE_CURRENT_SOURCE_DIR}/risc-v.yaml
                                   ${CMAKE_CURRENT_BINARY_DIR}/generated "idef"
 
