Fix headers resolution problem

--- a/simulator/cosimulation/CMakeLists.txt
+++ b/simulator/cosimulation/CMakeLists.txt
@@ -5,6 +5,8 @@ add_library (
     Cosim cosim.cpp
 )
 
+target_include_directories(Cosim PUBLIC ${SIMULATOR_ROOT})
+
 set_property(TARGET Cosim PROPERTY POSITION_INDEPENDENT_CODE ON)
 
 set(SOURCES cosim.cpp)
@@ -17,4 +19,3 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpic")
 
 add_library(cosim_impl OBJECT ${SOURCES})
 target_include_directories(cosim_impl PUBLIC ${SIMULATOR_ROOT})
-
